# PaperTanks

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  configure-wsl2.sh  configure.sh  verify_toolchain_wsl2.sh  verify_wsl2_setup.sh
CPM_modules/: Findbartman_gcc_support.cmake
ace/: Makefile  cmake_install.cmake
knowledgebase/: CMAKE_CONFIGURATION_ANALYSIS.md  WSL2_SETUP_README.md  skeleton_ace.md  windows_build_reqs.md
src/: main.c
